--- a/assets/css/owl.video.play.html
+++ b/assets/css/owl.video.play.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  
-<!-- Mirrored from main.d11gy8t912jbnx.amplifyapp.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Mar 2023 09:20:46 GMT -->
-<head>
+  <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Gourav Bagdi -Founder & CEO of Rising Growth Pvt. Ltd.">
     <meta name="author" content="Gourav Bagdi -Founder & CEO of Rising Growth Pvt. Ltd.">
-    <link rel="preconnect" href="https://fonts.gstatic.com/">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>Gourav Bagdi -Founder & CEO of Rising Growth Pvt. Ltd.</title>
 
@@ -47,7 +45,7 @@
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index-2.html" class="logo">
+            <a href="index.html" class="logo">
               <h4>Gourav <span> Bagdi</span></h4>
             </a>
             <!-- ***** Logo End ***** -->
@@ -361,7 +359,7 @@
           </div>
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="#" method="post">
+          <form id="contact" action="" method="post">
             <div class="row">
               <div class="col-lg-6">
                 <fieldset>
@@ -404,7 +402,7 @@
         <div class="col-lg-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.25s">
           <p>© Copyright 2022 Gourav Bagdi. All Rights Reserved. 
           
-          <br>Design & Powered By: <a rel="nofollow" href="https://www.arshadx.com/">ArshadX</a></p>
+          <br>Design & Powered By: <a rel="nofollow" href="https://www.arshadx.com">ArshadX</a></p>
         </div>
       </div>
     </div>
@@ -426,6 +424,4 @@
 </script> 
 
 </body>
-
-<!-- Mirrored from main.d11gy8t912jbnx.amplifyapp.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Mar 2023 09:20:55 GMT -->
 </html>
